--- a/src/app/user-admin/rights/rights-edit/rights-edit.component.html
+++ b/src/app/user-admin/rights/rights-edit/rights-edit.component.html
@@ -31,7 +31,7 @@
                 </tr>
               </thead>
               <tbody formArrayName="records">
-                <tr *ngFor="let iRow of formArray.controls; let i=index;" [formGroupName]="i">
+                <tr *ngFor="let iRow of formArray('records').controls; let i=index;" [formGroupName]="i">
                   <td> {{iRow.get('rights_module_name')?.value}}</td>
                   <td> {{iRow.get('rights_menu_name')?.value}}</td>
                   <td> <app-checkbox formControlName="rights_selected"></app-checkbox> </td>
