--- a/src/app/user-admin/settings/settings-list/settings-list.component.html
+++ b/src/app/user-admin/settings/settings-list/settings-list.component.html
@@ -38,7 +38,7 @@
               [ngClass]="{'table-info' : rec.id == selected_row_id }">
               <td>{{rec.caption}}</td>
               <td>
-                <app-settings-edit [appid]="appid" [menuid]="menuid" [type]="type" [rec]="rec"></app-settings-edit>
+                <app-settings-edit [sappid]="appid" [smenuid]="menuid" [stype]="type" [rec]="rec"></app-settings-edit>
               </td>
             </tr>
           </tbody>
