--- a/src/app/master/customer/customer-edit/customer-edit.component.html
+++ b/src/app/master/customer/customer-edit/customer-edit.component.html
@@ -2,6 +2,7 @@
   <h5>{{title}}</h5>
   <button *ngIf="bAdd" class="btn btn-sm btn-success" routerLink="/masters/customerEdit"
     [queryParams]="{id :0, _id:id+1,menuid:menuid,type:type,appid:appid}">New</button>
+  <button class="btn btn-success btn-sm ml-2" (click)="openHistory()">History</button>
   <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
 </div>
 
@@ -10,6 +11,7 @@
   <div class="container-fluid">
 
     <form [formGroup]="mform">
+
       <div class="row">
 
         <div class="col-sm-6">
@@ -49,13 +51,13 @@
             </div>
           </div>
           <div class="form-group row">
-            <label class="col-sm-4 form-label form-lable-sm" for=""></label>
+            <label class="col-sm-4 form-label form-lable-sm"></label>
             <div class="col-sm-8">
               <app-input maxlength="100" formControlName="cust_address2" [case]="'UPPER'" required></app-input>
             </div>
           </div>
           <div class="form-group row">
-            <label class="col-sm-4 form-label form-lable-sm" for=""></label>
+            <label class="col-sm-4 form-label form-lable-sm"></label>
             <div class="col-sm-8">
               <app-input maxlength="100" formControlName="cust_address3" [case]="'UPPER'" required></app-input>
             </div>
@@ -83,6 +85,7 @@
 <div class="page-footer line-bottom">
   <button *ngIf="bAdd || bEdit" class="btn btn-sm btn-success" (click)="save()" [disabled]="mform.invalid">Save</button>
 </div>
+
 
 <div *ngIf="showModel">
   <pre>
