--- a/src/app/user-admin/user/user-edit/user-edit.component.html
+++ b/src/app/user-admin/user/user-edit/user-edit.component.html
@@ -5,95 +5,107 @@
   <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
 </div>
 
-<div class="page-body">
 
-  <div class="container-fluid">
-    <form [formGroup]="mform">
-      <div class="row">
 
-        <div class="col-sm-6">
 
-          <div class="form-group row">
-            <label class="col-sm-4 form-label form-lable-sm" for="">User Code</label>
-            <div class="col-sm-8">
-              <app-input maxlength="20" formControlName="user_code" [case]="''" required></app-input>
-            </div>
+<form [formGroup]="mform">
+
+  <div class="page-body">
+    <div class="row ">
+
+      <div class="col-sm-6">
+
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for="">User Code</label>
+          <div class="col-sm-8">
+            <app-input maxlength="20" formControlName="user_code" [case]="''" required></app-input>
           </div>
-
-          <div class="form-group row">
-            <label class="col-sm-4 form-label form-lable-sm" for="">User Name</label>
-            <div class="col-sm-8">
-              <app-input maxlength="60" formControlName="user_name" [case]="''" required></app-input>
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <label class="col-sm-4 form-label form-lable-sm" for="">Password</label>
-            <div class="col-sm-8">
-              <app-input type="password" maxlength="20" formControlName="user_password" [case]="''"
-                required></app-input>
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <label class="col-sm-4 form-label form-lable-sm" for="">Email</label>
-            <div class="col-sm-8">
-              <app-input type="email" maxlength="60" formControlName="user_email" [case]="''" required></app-input>
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <label class="form-label form-label-sm col-sm-4">Admin</label>
-            <div class="col-sm-8">
-              <app-checkbox formControlName="user_is_admin"></app-checkbox>
-              <label for="user_is_admin" class="ms-1 form-label form-label-sm">Yes/No</label>
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <label class="col-sm-4 form-label form-lable-sm" for="">Default Branch</label>
-            <div class="col-sm-8">
-              <auto-complete formControlName="rec_branch_name" (CallBack)="callBack($event)" [table]="'branchm'"
-                [company_id]="getCompanyId()" [display_column]="'branch_name'" [url]="url" url required></auto-complete>
-            </div>
-          </div>
-
-
         </div>
 
-        <div class="col-sm-6">
-
-          <table class="table table-sm table-hover table-bordered table-striped table-condensed">
-
-            <thead class="table-success">
-              <tr class="table-header">
-                <th>Selected</th>
-                <th>Branch</th>
-              </tr>
-            </thead>
-
-            <tbody formArrayName="userbranches">
-
-              <tr *ngFor="let iRow of formArray('userbranches').controls; let i=index;" [formGroupName]="i">
-                <td>
-                  <app-checkbox formControlName="ub_selected"></app-checkbox>
-                </td>
-                <td>
-                  <input formControlName="rec_branch_name" class="form-control form-control-sm">
-                </td>
-              </tr>
-
-            </tbody>
-          </table>
-
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for="">User Name</label>
+          <div class="col-sm-8">
+            <app-input maxlength="60" formControlName="user_name" [case]="''" required></app-input>
+          </div>
         </div>
+
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for="">Password</label>
+          <div class="col-sm-8">
+            <app-input type="password" maxlength="20" formControlName="user_password" [case]="''" required></app-input>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for="">Email</label>
+          <div class="col-sm-8">
+            <app-input type="email" maxlength="60" formControlName="user_email" [case]="''" required></app-input>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label class="form-label form-label-sm col-sm-4">Admin</label>
+          <div class="col-sm-8">
+            <app-checkbox formControlName="user_is_admin"></app-checkbox>
+            <label for="user_is_admin" class="ms-1 form-label form-label-sm">Yes/No</label>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for="">Default Branch</label>
+          <div class="col-sm-8">
+            <auto-complete formControlName="rec_branch_name" (CallBack)="callBack($event)" [table]="'branchm'"
+              [company_id]="getCompanyId()" [display_column]="'branch_name'" [url]="url" url required></auto-complete>
+          </div>
+        </div>
+
 
       </div>
 
-    </form>
+    </div>
   </div>
 
-</div>
+  <div class="page-body">
+
+    <div class="row">
+
+      <div class="col-sm-6">
+
+        <table class="table table-sm table-hover table-bordered table-striped table-condensed">
+
+          <thead class="table-success">
+            <tr class="table-header">
+              <th>Selected</th>
+              <th>Branch</th>
+            </tr>
+          </thead>
+
+          <tbody formArrayName="userbranches">
+
+            <tr *ngFor="let iRow of formArray('userbranches').controls; let i=index;" [formGroupName]="i">
+              <td>
+                <app-checkbox formControlName="ub_selected"></app-checkbox>
+              </td>
+              <td>
+                <input formControlName="rec_branch_name" class="form-control form-control-sm">
+              </td>
+            </tr>
+
+          </tbody>
+        </table>
+
+      </div>
+
+    </div>
+
+  </div>
+
+
+</form>
+
+
+
+
 
 <div class="page-footer line-bottom">
   <button *ngIf="bAdd || bEdit" class="btn btn-sm btn-success" (click)="save()" [disabled]="mform.invalid">Save</button>
