--- a/src/app/accounts/accgroup/accgroup-list/accgroup-list.component.html
+++ b/src/app/accounts/accgroup/accgroup-list/accgroup-list.component.html
@@ -1,7 +1,7 @@
 <div class="page-header">
   <h5>{{title}}</h5>
   <button *ngIf="bAdd" class="btn btn-success btn-sm" routerLink="/accounts/accgroupEdit"
-    [queryParams]="{id :0,menuid:menuid,type:type,  appid:appid}">New</button>
+    [queryParams]="{id :0,mode:'add',menuid:menuid,type:type,appid:appid}">New</button>
   <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
 </div>
 
