--- a/src/app/user-admin/company/company-edit/company-edit.component.html
+++ b/src/app/user-admin/company/company-edit/company-edit.component.html
@@ -16,14 +16,14 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Company Code</label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="comp_code" [case]="''" required></app-input>
+            <app-input maxlength="100" formControlName="comp_code" [case]="'UPPER'" required></app-input>
           </div>
         </div>
 
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Company Name</label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="comp_name" [case]="''" required></app-input>
+            <app-input maxlength="100" formControlName="comp_name" [case]="'UPPER'" required></app-input>
           </div>
         </div>
 
@@ -31,21 +31,21 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Address1</label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="comp_address1" [case]="''" required></app-input>
+            <app-input maxlength="100" formControlName="comp_address1" [case]="'UPPER'" required></app-input>
           </div>
         </div>
 
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Address2</label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="comp_address2" [case]="''"></app-input>
+            <app-input maxlength="100" formControlName="comp_address2" [case]="'UPPER'"></app-input>
           </div>
         </div>
 
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Address3</label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="comp_address3" [case]="''"></app-input>
+            <app-input maxlength="100" formControlName="comp_address3" [case]="'UPPER'"></app-input>
           </div>
         </div>
 
