--- a/src/app/user-admin/user/user-edit/user-edit.component.html
+++ b/src/app/user-admin/user/user-edit/user-edit.component.html
@@ -16,28 +16,29 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">User Code</label>
           <div class="col-sm-8">
-            <app-input maxlength="20" formControlName="user_code" [case]="''" required></app-input>
+            <app-input maxlength="20" formControlName="user_code" [case]="'UPPER'" required></app-input>
           </div>
         </div>
 
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">User Name</label>
           <div class="col-sm-8">
-            <app-input maxlength="60" formControlName="user_name" [case]="''" required></app-input>
+            <app-input maxlength="60" formControlName="user_name" [case]="'UPPER'" required></app-input>
           </div>
         </div>
 
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Password</label>
           <div class="col-sm-8">
-            <app-input type="password" maxlength="20" formControlName="user_password" [case]="''" required></app-input>
+            <app-input type="password" maxlength="20" formControlName="user_password" [case]="'UPPER'"
+              required></app-input>
           </div>
         </div>
 
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Email</label>
           <div class="col-sm-8">
-            <app-input type="email" maxlength="60" formControlName="user_email" [case]="''" required></app-input>
+            <app-input type="email" maxlength="60" formControlName="user_email" [case]="'UPPER'" required></app-input>
           </div>
         </div>
 
