--- a/src/app/user-admin/module/module-edit/module-edit.component.html
+++ b/src/app/user-admin/module/module-edit/module-edit.component.html
@@ -16,7 +16,7 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Module Name</label>
           <div class="col-sm-8">
-            <app-input maxlength="60" formControlName="module_name" [case]="'UPPER'" required></app-input>
+            <app-input maxlength="60" formControlName="module_name" [case]="''" required></app-input>
           </div>
         </div>
 
