--- a/src/app/tnt/track/track-edit/track-edit.component.html
+++ b/src/app/tnt/track/track-edit/track-edit.component.html
@@ -17,14 +17,14 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Booking#</label>
           <div class="col-sm-8">
-            <app-input maxlength="60" formControlName="track_book_no" [case]="'UPPER'"></app-input>
+            <app-input maxlength="100" formControlName="track_book_no" [case]="'UPPER'"></app-input>
           </div>
         </div>
 
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Container#</label>
           <div class="col-sm-8">
-            <app-input maxlength="11" formControlName="track_cntr_no" [case]="'UPPER'" required></app-input>
+            <app-input [maxlength]="11" formControlName="track_cntr_no" [case]="'UPPER'" required></app-input>
           </div>
         </div>
 
