--- a/src/app/core/contactus/contactus.component.html
+++ b/src/app/core/contactus/contactus.component.html
@@ -1,59 +1,4 @@
-<div class="page-header">
+<div class="page-header line-bottom">
   <h5>{{title}}</h5>
   <button class="btn btn-success btn-sm">Return</button>
-</div>
-
-<div class="page-body">
-
-
-
-  <form [formGroup]="loginForm">
-
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">Booking Ref</label>
-          <div class="col-sm-8">
-            <app-input formControlName="bookingref" [case]="'UPPER'"></app-input>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">Mbl Ref</label>
-          <div class="col-sm-8">
-            <app-input formControlName="mblref" [case]="'UPPER'"></app-input>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">Container#</label>
-          <div class="col-sm-8">
-            <app-input formControlName="cntrno" [case]="'UPPER'"></app-input>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </form>
-</div>
-
-
-<div class="page-footer line-bottom">
-  <button class="btn btn-sm btn-success" (click)="search()">Search</button>
-</div>
-
-<div>
-  <pre>
-    <code>
-    {{loginForm.value | json}}
-  </code>
-  </pre>
 </div>
