--- a/src/app/master/param/param-edit/param-edit.component.html
+++ b/src/app/master/param/param-edit/param-edit.component.html
@@ -25,14 +25,57 @@
         <div class=" form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Name</label>
           <div class="col-sm-8">
-            <app-input maxlength="60" formControlName="param_name" [case]="'upper'" required></app-input>
+            <app-input maxlength="100" formControlName="param_name" [case]="'upper'" required></app-input>
           </div>
         </div>
+
+
+        @if( value1 !="" ) {
+        <div class=" form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for="">{{value1}}</label>
+          <div class="col-sm-8">
+            <app-input maxlength="100" formControlName="param_value1" [case]="'upper'"></app-input>
+          </div>
+        </div>
+        }
+        @if( value2 !="" ) {
+        <div class=" form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for="">{{value2}}</label>
+          <div class="col-sm-8">
+            <app-input maxlength="100" formControlName="param_value2" [case]="'upper'"></app-input>
+          </div>
+        </div>
+        }
+        @if( value3 !="" ) {
+        <div class=" form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for="">{{value3}}</label>
+          <div class="col-sm-8">
+            <app-input maxlength="100" formControlName="param_value3" [case]="'upper'"></app-input>
+          </div>
+        </div>
+        }
+        @if( value4 !="" ) {
+        <div class=" form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for="">{{value4}}</label>
+          <div class="col-sm-8">
+            <app-input maxlength="100" formControlName="param_value4" [case]="'upper'"></app-input>
+          </div>
+        </div>
+        }
+        @if( value4 !="" ) {
+        <div class=" form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for="">{{value4}}</label>
+          <div class="col-sm-8">
+            <app-input maxlength="100" formControlName="param_value5" [case]="'upper'"></app-input>
+          </div>
+        </div>
+        }
+
 
         <div class="form-group row">
           <label class="col-sm-4 form-label form-label-sm" for="">Order</label>
           <div class="col-sm-8">
-            <app-input type="number" maxlength="5" formControlName="param_order" required>
+            <app-input type="number" maxlength="5" formControlName="param_order" [case]="'upper'">
             </app-input>
           </div>
         </div>
@@ -49,4 +92,8 @@
 
 <div class="page-footer line-bottom">
   <button *ngIf="bAdd || bEdit" class="btn btn-sm btn-success" (click)="save()" [disabled]="mform.invalid">Save</button>
+
+  <button *ngIf="bAdd" class="btn btn-sm btn-success" routerLink="/admin/settingsList"
+    [queryParams]="{type:type,menuid:'PARAM-SETTINGS',appid:appid,param_id:id, title : getTitle() }">Settings</button>
+
 </div>
