--- a/src/app/tnt/track/track-edit/track-edit.component.html
+++ b/src/app/tnt/track/track-edit/track-edit.component.html
@@ -50,7 +50,7 @@
 
         <div class="form-group row mt-1">
           <div class="col-sm-12">
-            <button *ngIf="mode=='edit'" class="btn btn-sm btn-success" (click)="loadTracking()"
+            <button *ngIf="mode=='edit'" class="btn btn-sm btn-success" (click)="loadTrackingDetails()"
               [disabled]="mform.invalid">Refresh</button>
           </div>
         </div>
@@ -73,20 +73,15 @@
       <div class="col-sm-12">
 
         <table class="table table-sm table-hover table-bordered table-condensed hand-cursor">
-
           <thead class="table-success">
             <tr class="table-header">
-              <th>Event-Type</th>
-              <th>Event-Code</th>
               <th>Transport-Mode</th>
               <th>Status-Code</th>
               <th>Status</th>
-              <th>Port</th>
-              <th>Place</th>
+              <th>Port-Code</th>
+              <th>Port-Name</th>
               <th>Location</th>
-              <th>Facility</th>
               <th>Date</th>
-              <th>Time</th>
               <th>Vessel</th>
               <th>IMO</th>
               <th>Voyage</th>
@@ -95,31 +90,24 @@
           </thead>
 
           <tbody formArrayName="tracking_data">
-
             <tr [ngClass]="{
-            'table-success': iRow.get('row_type')?.value == 'POL' || iRow.get('row_type')?.value == 'POD',
-            'table-info' : iRow.get('row_type')?.value == 'VESSEL'
+            'table-success': iRow.get('tnt_row_type')?.value == 'POL' || iRow.get('tnt_row_type')?.value == 'POD',
+            'table-info' : iRow.get('tnt_row_type')?.value == 'VESSEL'
           }" *ngFor="let iRow of formArray('tracking_data').controls; let i=index;" [formGroupName]="i">
-              <td> {{iRow.get('tnt_event_type')?.value }}</td>
-              <td> {{iRow.get('tnt_event_code')?.value }}</td>
               <td> {{iRow.get('tnt_transport_mode')?.value }}</td>
               <td> {{iRow.get('tnt_status_code')?.value }}</td>
               <td> {{iRow.get('tnt_status_name')?.value }}</td>
               <td> {{iRow.get('tnt_port_code')?.value }}</td>
               <td> {{iRow.get('tnt_port_name')?.value }}</td>
-              <td> {{iRow.get('tnt_location_address')?.value }}</td>
-              <td> {{iRow.get('tnt_facility_name')?.value }}</td>
+              <td> {{iRow.get('tnt_port_location')?.value }}</td>
               <td> {{iRow.get('tnt_date')?.value }}</td>
-              <td> {{iRow.get('tnt_time')?.value }}</td>
               <td> {{iRow.get('tnt_vessel')?.value }}</td>
               <td> {{iRow.get('tnt_vessel_imon')?.value }}</td>
               <td> {{iRow.get('tnt_voyage')?.value }}</td>
-              <td> {{iRow.get('row_type')?.value }}</td>
+              <td> {{iRow.get('tnt_row_type')?.value }}</td>
             </tr>
-
           </tbody>
         </table>
-
 
       </div>
 
