--- a/src/app/tnt/track/track-edit/track-edit.component.html
+++ b/src/app/tnt/track/track-edit/track-edit.component.html
@@ -75,17 +75,18 @@
         <table class="table table-sm table-hover table-bordered table-condensed hand-cursor">
           <thead class="table-success">
             <tr class="table-header">
-              <th>Transport-Mode</th>
-              <th>Status-Code</th>
+              <!-- <th>Transport-Mode</th> -->
+              <!-- <th>Status-Code</th> -->
               <th>Status</th>
               <th>Port-Code</th>
-              <th>Port-Name</th>
+              <!-- <th>Port-Name</th> -->
               <th>Location</th>
               <th>Date</th>
+              <th>Act/Est</th>y
               <th>Vessel</th>
               <th>IMO</th>
               <th>Voyage</th>
-              <th>type</th>
+              <!-- <th>type</th> -->
             </tr>
           </thead>
 
@@ -94,17 +95,18 @@
             'table-success': iRow.get('tnt_row_type')?.value == 'POL' || iRow.get('tnt_row_type')?.value == 'POD',
             'table-info' : iRow.get('tnt_row_type')?.value == 'VESSEL'
           }" *ngFor="let iRow of formArray('tracking_data').controls; let i=index;" [formGroupName]="i">
-              <td> {{iRow.get('tnt_transport_mode')?.value }}</td>
-              <td> {{iRow.get('tnt_status_code')?.value }}</td>
+              <!-- <td> {{iRow.get('tnt_transport_mode')?.value }}</td> -->
+              <!-- <td> {{iRow.get('tnt_status_code')?.value }}</td> -->
               <td> {{iRow.get('tnt_status_name')?.value }}</td>
               <td> {{iRow.get('tnt_port_code')?.value }}</td>
-              <td> {{iRow.get('tnt_port_name')?.value }}</td>
+              <!-- <td> {{iRow.get('tnt_port_name')?.value }}</td> -->
               <td> {{iRow.get('tnt_port_location')?.value }}</td>
               <td> {{iRow.get('tnt_date')?.value }}</td>
+              <td> {{iRow.get('tnt_event_type')?.value }}</td>
               <td> {{iRow.get('tnt_vessel')?.value }}</td>
               <td> {{iRow.get('tnt_vessel_imon')?.value }}</td>
               <td> {{iRow.get('tnt_voyage')?.value }}</td>
-              <td> {{iRow.get('tnt_row_type')?.value }}</td>
+              <!-- <td> {{iRow.get('tnt_row_type')?.value }}</td> -->
             </tr>
           </tbody>
         </table>
@@ -119,7 +121,6 @@
 
 
 </form>
-
 
 
 
