--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
+<app-mainmenu></app-mainmenu>
+
 <app-progress-screen> </app-progress-screen>
 
-<div class="fixed-top">
+<!-- <div class="fixed-top">
   <app-menu></app-menu>
-</div>
+</div> -->
 
 <app-toast></app-toast>
 
-
-<div class="router">
+<!-- <div class="router">
   <router-outlet></router-outlet>
-</div>
+</div> -->
