--- a/src/styles.css
+++ b/src/styles.css
@@ -5,13 +5,19 @@ body {
   padding: 0px;
   box-sizing: border-box;
   font-size: 12px;
+  height: 100%;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   overflow-x: hidden;
+  color: #6e768e !important;
+
 }
 
-.router {
-  margin-top: 62px;
 
+
+
+.router {
+  /* margin-top: 62px; */
+  margin-top: 75px;
 }
 
 .table {
@@ -56,7 +62,7 @@ label {
   align-items: baseline;
   gap: 4px;
   color: chocolate;
-  margin: 65px 2px 0px 1px;
+  margin: 2px 2px 0px 1px;
   padding: 10px 6px 6px 6px;
 
   border-color: lightgray;
@@ -122,4 +128,42 @@ i {
 
 .btn {
   box-shadow: 4px 4px 10px 0px lightgray;
+}
+
+
+
+
+
+
+
+
+
+
+/* Scrollbar styles for webkit browsers */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  /* Background of the scrollbar track */
+
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  /* Color of the scrollbar thumb */
+  border-radius: 6px;
+  /* Roundness of the scrollbar thumb */
+  border: 2px solid #f1f1f1;
+  /* Padding around the scrollbar thumb */
+
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+  cursor: pointer;
+  /* Color of the scrollbar thumb when hovered */
 }
