--- a/src/app/user-admin/menum/menu-edit/menu-edit.component.html
+++ b/src/app/user-admin/menum/menu-edit/menu-edit.component.html
@@ -51,6 +51,14 @@
 
 
         <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for="">Sub Menu</label>
+          <div class="col-sm-8">
+            <auto-complete formControlName="menu_submenu_name" (CallBack)="callBack($event)" [table]="'submenu'"
+              [company_id]="getCompanyId()" [display_column]="'module_name'" [url]="url"></auto-complete>
+          </div>
+        </div>
+
+        <div class="form-group row">
           <label class="form-label form-label-sm col-sm-4">Visible</label>
           <div class="col-sm-8">
             <app-checkbox formControlName="menu_visible"></app-checkbox>
