--- a/src/app/user-admin/module/module-edit/module-edit.component.html
+++ b/src/app/user-admin/module/module-edit/module-edit.component.html
@@ -8,7 +8,6 @@
 <form [formGroup]="mform">
   <div class="page-body">
 
-
     <div class="row">
 
       <div class="col-sm-6">
@@ -17,6 +16,14 @@
           <label class="col-sm-4 form-label form-lable-sm" for="">Module Name</label>
           <div class="col-sm-8">
             <app-input maxlength="60" formControlName="module_name" [case]="''" required></app-input>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for="">Parent</label>
+          <div class="col-sm-8">
+            <auto-complete formControlName="module_parent_name" (CallBack)="callBack($event)" [table]="'modulem'"
+              [company_id]="getCompanyId()" [display_column]="'module_name'" [url]="url"></auto-complete>
           </div>
         </div>
 
