--- a/src/app/tnt/track/track-edit/track-edit.component.html
+++ b/src/app/tnt/track/track-edit/track-edit.component.html
@@ -82,7 +82,7 @@
               <!-- <th>Port-Name</th> -->
               <th>Location</th>
               <th>Date</th>
-              <th>Act/Est</th>y
+              <th>Act/Est</th>
               <th>Vessel</th>
               <th>IMO</th>
               <th>Voyage</th>
