--- a/src/app/user-admin/module/module-edit/module-edit.component.html
+++ b/src/app/user-admin/module/module-edit/module-edit.component.html
@@ -23,14 +23,15 @@
           <label class="col-sm-4 form-label form-lable-sm" for="">Parent</label>
           <div class="col-sm-8">
             <auto-complete formControlName="module_parent_name" (CallBack)="callBack($event)" [table]="'modulem'"
-              [company_id]="getCompanyId()" [display_column]="'module_name'" [url]="url"></auto-complete>
+              [company_id]="getCompanyId()" [url]="url" id="module_parent_name"
+              display_column="[{'caption':'code','value':'module_id'},{'caption':'name','value':'module_name'}]"></auto-complete>
           </div>
         </div>
 
         <div class="form-group row">
           <label class="form-label form-label-sm col-sm-4">Installed</label>
           <div class="col-sm-8">
-            <app-checkbox formControlName="module_is_installed"></app-checkbox>
+            <app-checkbox formControlName="module_is_installed"> </app-checkbox>
             <label for="module_is_installed" class="ms-1 form-label form-label-sm">Visible</label>
           </div>
         </div>
@@ -38,7 +39,8 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-label-sm" for="">Order</label>
           <div class="col-sm-8">
-            <app-input type="number" maxlength="5" formControlName="module_order" required> </app-input>
+            <app-input type="number" maxlength="5" formControlName="module_order" required>
+            </app-input>
           </div>
         </div>
 
