--- a/src/app/user-admin/settings/settings-edit/settings-edit.component.html
+++ b/src/app/user-admin/settings/settings-edit/settings-edit.component.html
@@ -10,7 +10,7 @@
           </ng-container>
           <ng-container *ngIf="format=='table'">
             <auto-complete formControlName="name" (CallBack)="callBack($event)" [table]="table_name"
-              [company_id]="getCompanyId()" [display_column]="display_column2" [url]="url"></auto-complete>
+              [company_id]="getCompanyId()" [url]="url" [display_column]="list_data"></auto-complete>
           </ng-container>
           <ng-container *ngIf="format=='boolean'">
             <app-checkbox formControlName="value"></app-checkbox>
