--- a/src/app/user-admin/user/user-edit/user-edit.component.html
+++ b/src/app/user-admin/user/user-edit/user-edit.component.html
@@ -54,7 +54,9 @@
           <label class="col-sm-4 form-label form-lable-sm" for="">Default Branch</label>
           <div class="col-sm-8">
             <auto-complete formControlName="rec_branch_name" (CallBack)="callBack($event)" [table]="'branchm'"
-              [company_id]="getCompanyId()" [display_column]="'branch_name'" [url]="url" required></auto-complete>
+              [company_id]="getCompanyId()" [url]="url"
+              display_column="[{'caption':'code','value':'branch_id'},{'caption':'name','value':'branch_name'}]"
+              required></auto-complete>
           </div>
         </div>
 
