--- a/src/app/user-admin/menum/menu-edit/menu-edit.component.html
+++ b/src/app/user-admin/menum/menu-edit/menu-edit.component.html
@@ -54,7 +54,8 @@
           <label class="col-sm-4 form-label form-lable-sm" for="">Sub Menu</label>
           <div class="col-sm-8">
             <auto-complete formControlName="menu_submenu_name" (CallBack)="callBack($event)" [table]="'submenu'"
-              [company_id]="getCompanyId()" [display_column]="'module_name'" [url]="url"></auto-complete>
+              [company_id]="getCompanyId()" [url]="url"
+              display_column="[{'caption':'code','value':'module_id'},{'caption':'name','value':'module_name'}]"></auto-complete>
           </div>
         </div>
 
