--- a/src/app/user-admin/menum/menu-edit/menu-edit.component.html
+++ b/src/app/user-admin/menum/menu-edit/menu-edit.component.html
@@ -45,7 +45,9 @@
           <label class="col-sm-4 form-label form-lable-sm" for="">Module</label>
           <div class="col-sm-8">
             <auto-complete formControlName="menu_module_name" (CallBack)="callBack($event)" [table]="'modulem'"
-              [company_id]="getCompanyId()" [display_column]="'module_name'" [url]="url" required></auto-complete>
+              [company_id]="getCompanyId()" [url]="url"
+              display_column="[{'caption':'code','value':'module_id'},{'caption':'name','value':'module_name'}]"
+              required></auto-complete>
           </div>
         </div>
 
