--- a/src/app/user-admin/user/user-edit/user-edit.component.html
+++ b/src/app/user-admin/user/user-edit/user-edit.component.html
@@ -53,8 +53,8 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Default Branch</label>
           <div class="col-sm-8">
-            <auto-complete formControlName="rec_branch_name" (CallBack)="callBack($event)" [table]="'branchm'"
-              [company_id]="getCompanyId()" [url]="url"
+            <auto-complete formControlName="rec_branch_name" id="rec_branch_name" (CallBack)="callBack($event)"
+              [table]="'branchm'" [company_id]="getCompanyId()" [url]="url"
               display_column="[{'caption':'code','value':'branch_id'},{'caption':'name','value':'branch_name'}]"
               required></auto-complete>
           </div>
