--- a/src/app/accounts/acctm/acctm-edit/acctm-edit.component.html
+++ b/src/app/accounts/acctm/acctm-edit/acctm-edit.component.html
@@ -40,7 +40,7 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-label-sm" for="">Type</label>
           <div class="col-sm-8">
-            <app-combobox [dataSource]="dataList" [displayColumn]="'value'" [valueColumn]="'key'"
+            <app-combobox [dataSource]="dataList" [valueColumn]="'key'" [displayColumn]="'value'"
               formControlName="acc_type"></app-combobox>
           </div>
         </div>
