--- a/src/app/core/login-branch/login-branch.component.html
+++ b/src/app/core/login-branch/login-branch.component.html
@@ -18,7 +18,7 @@
             <label class="col-sm-4 form-label form-label-sm" for="">Branch</label>
 
             <div class="col-sm-8">
-              <app-combobox [dataSource]="records" [displayColumn]="'branch_name'" [valueColumn]="'branch_id'"
+              <app-combobox [dataSource]="records" [valueColumn]="'branch_id'" [displayColumn]="'branch_name'"
                 formControlName="branch_id"></app-combobox>
             </div>
 
