--- a/src/app/user-admin/module/module-search/module-search.component.html
+++ b/src/app/user-admin/module/module-search/module-search.component.html
@@ -14,7 +14,7 @@
       <div class="form-group row">
         <label class="col-sm-4 form-label form-label-sm" for="">Visible</label>
         <div class="col-sm-8">
-          <app-combobox [dataSource]="dataList" [displayColumn]="'value'" [valueColumn]="'key'"
+          <app-combobox [dataSource]="dataList" [valueColumn]="'key'" [displayColumn]="'value'"
             formControlName="module_is_installed"></app-combobox>
         </div>
       </div>
