--- a/src/app/accounts/accgroup/accgroup-search/accgroup-search.component.html
+++ b/src/app/accounts/accgroup/accgroup-search/accgroup-search.component.html
@@ -13,7 +13,7 @@
       <div class="form-group row">
         <label class="col-sm-4 form-label form-label-sm" for="">Group</label>
         <div class="col-sm-8">
-          <app-combobox [dataSource]="dataList" [displayColumn]="'value'" [valueColumn]="'key'"
+          <app-combobox [dataSource]="dataList" [valueColumn]="'key'" [displayColumn]="'value'"
             formControlName="grp_main_group"></app-combobox>
         </div>
       </div>
