--- a/src/app/user-admin/menum/menu-search/menu-search.component.html
+++ b/src/app/user-admin/menum/menu-search/menu-search.component.html
@@ -21,7 +21,7 @@
       <div class="form-group row">
         <label class="col-sm-4 form-label form-label-sm" for="">Visible</label>
         <div class="col-sm-8">
-          <app-combobox [dataSource]="dataList" [displayColumn]="'value'" [valueColumn]="'key'"
+          <app-combobox [dataSource]="dataList" [valueColumn]="'key'" [displayColumn]="'value'"
             formControlName="menu_visible"></app-combobox>
         </div>
       </div>
