--- a/src/app/user-admin/user/user-edit/user-edit.component.html
+++ b/src/app/user-admin/user/user-edit/user-edit.component.html
@@ -55,8 +55,7 @@
           <div class="col-sm-8">
             <auto-complete formControlName="rec_branch_name" id="rec_branch_name" (CallBack)="callBack($event)"
               [table]="'branchm'" [company_id]="getCompanyId()" [url]="url"
-              display_column="[{'caption':'code','value':'branch_id'},{'caption':'name','value':'branch_name'}]"
-              required></auto-complete>
+              display_column="[{'caption':'code','value':'branch_id'},{'caption':'name','value':'branch_name'}]"></auto-complete>
           </div>
         </div>
 
