--- a/src/app/user-admin/user/user-search/user-search.component.html
+++ b/src/app/user-admin/user/user-search/user-search.component.html
@@ -14,7 +14,7 @@
       <div class="form-group row">
         <label class="col-sm-4 form-label form-label-sm" for="">Admin</label>
         <div class="col-sm-8">
-          <app-combobox [dataSource]="dataList" [displayColumn]="'value'" [valueColumn]="'key'"
+          <app-combobox [dataSource]="dataList" [valueColumn]="'key'" [displayColumn]="'value'"
             formControlName="user_is_admin"></app-combobox>
         </div>
       </div>
